package com.codecool.pa.workers;

public enum Position {
    MANUAL_WORKER,
    MEDIC,
    MANAGER
}
